--- a/style.css
+++ b/style.css
@@ -1,57 +1,88 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #f4f4f4;
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    width: 100vw;
+    overflow: hidden;
 }
+
 .profile-card{
     background: #ffffff;
     padding: 20px;
-    max-width: 400px;
+    max-width: 720px;
+    min-width:540px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    text-align: center;
+    display: flex;
+    align-items: center;
+    gap:32px;
+}
+
+.img-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.profile-image{
+    width: 100%;
+}
+
+.profile-info{
+    width: 60%;
 }
 
 .profile-info h1{
-  margin: 16px;  
+  margin-bottom: 8px;  
   font-size: 20px;
   color: #101828;
 }
+
 .profile-info h2{
     margin: 8px 0;
     font-size: 14px;
     font-weight: 300;
     color: #0065FF;
 }
+
 .profile-info p{
-    font-size: 16px;
+    font-size: 12px;
     color: #667085;
     line-height: 1.6;
 }
+
 .social-links a{
     color: #007BFF;
     text-decoration: none;
     font-weight: bold;
     margin: 0 4px;
+    font-size: 12px;
 }
+
 .social-links a:hover{
     text-decoration: underline;
 }
+
 .utc-time{
-    margin-top: 15px;
+    margin-top: 16px;
     font-size: 14px;
     color: #667085;
     font-style: italic;
 }
+
 @media (max-width:600px){
     body{
-     width: 100vw; 
-     height: 100vh;  
+        width: 100vw; 
+        height: 100vh;  
+        overflow: scroll;
+        padding: 5vh 0 5vh 0;
+        align-items: flex-start;
     }
     .profile-card{
         display: flex;
@@ -59,10 +90,31 @@ body{
         align-items: center;
         width: 90vw;
         padding: 16px;
-        max-width: 90vw;
+        max-width: 80vw;
+        min-width:80vw;     
+        gap:16px;
+        box-shadow: none;
+        margin: 0;
+        padding: 0;
     }
-    .profle-image{
-        width: 50px;
-        height: 50px;
+    .img-container{
+        width: 100%;
+        height: fit;
+    }
+    .profile-image{
+        width: 100%;
+    }
+    .profile-info{
+        width: 100%;
+        text-align: center;
+    }
+    .profile-info h1{
+        margin-bottom: 8px;  
+    }
+    .profile-info p{
+        font-size: 14px;        
+    }
+    .short-bio{
+        margin-bottom: 32px;
     }
 }
